Refs #286059 - Technical Library search: fix display on small screen.

--- a/src/components/Result/search-styles.less
+++ b/src/components/Result/search-styles.less
@@ -1,5 +1,11 @@
 @clms-primary: #a0b128;
 
+body.clmsSearchTechnicalLibrary-view {
+  div#page-document.container {
+    width: auto !important;
+  }
+}
+
 .searchapp.searchapp-clmsSearchTechnicalLibrary {
   .u-item.listing-item {
     padding: 0.1rem;
